# TRIPOD-Code

./: .env.example  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  environment.yaml  pyproject.toml  requirements.yml
.github/workflows/: tests.yml
data/00_references/: merged_references.parquet.brotli
data/00_references/TRIPOD/: 25560730_11_Aug_25.csv  25572824_11_Aug_25.csv  25600898_11_Aug_25.csv  25623047_11_Aug_25.csv  TRIPOD_entries.md  (+1 more)
data/02_paper_assessment/: gt_paper_assessment.csv  gt_paper_assessment_dev.csv  gt_paper_assessment_test.csv  raw_annotations_paper_assessment.csv
data/0_references_csv/: merge_references.ipynb  merged_references.csv
notebooks/: 00_merge_TRIPOD_references.ipynb  01_gather_full_text.ipynb  02_generate_paper_assessment_annotations.ipynb  02a_create_paper_assessment_annotations.ipynb  02b_evaluate_paper_assessment_prompt.ipynb  02c_generate_paper_assessment_predictions.ipynb  03_iterate_paper_assessment_prompt.ipynb  03a_create_repo_assessment_annotations.ipynb  03a_download_repos.ipynb  03b_create_repo_assessment_annotations.ipynb  03b_evaluate_repo_assessment_prompt.ipynb  03c_download_repos.ipynb  03c_evaluate_repo_assessment_prompt.ipynb  03d_generate_repo_assessment_predictions.ipynb  04_final_analysis.ipynb  04_generate_paper_assessment_predictions.ipynb  example.ipynb
src/llm_utils/: __init__.py  llm_wrapper.py  structs.py
src/repo_utils/: __init__.py  example_usage.py  main_extractor.py  repo_providers.py  tokenizer.py
tests/: test_hello.py  test_llm_utils.py  test_repo_utils.py
(+16 files in other folders)
