[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TRIPOD-Code"
version = "0.1.0"
description = "Codebase for TRIPOD-Code"
readme = "README.md"
authors = [
  { name = "Thomas Sounack", email = "thomas_sounack@dfci.harvard.edu" }
]
license = { text = "MIT" }
requires-python = ">=3.13"

dependencies = [
    "pandas>=2.0",
    "numpy>=2.0"
]

[tool.setuptools.packages.find]
where = ["src"]